[metadata]
name = MooCoderPy-rjmatthews62
version = 0.1.1
author = Robbie Matthews
author_email = robbie@mithril.com.au
description = Coding IDE/Client for LambdaMOO style servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rjmatthews62/MooCoderPy
project_urls =
    Bug Tracker = https://github.com/rjmatthews62/MooCoderPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src